--- a/WebAss2/WebAss2.csproj
+++ b/WebAss2/WebAss2.csproj
@@ -116,9 +116,11 @@
     <Content Include="App_Data\ticketo-DB_log.ldf">
       <DependentUpon>ticketo-DB.mdf</DependentUpon>
     </Content>
+    <Content Include="clerk\EventDetails.aspx" />
     <Content Include="clerk\SearchReservation.aspx" />
     <Content Include="clerk\ReservationDetails.aspx" />
     <Content Include="clerk\Tickets.aspx" />
+    <Content Include="clerk\ViewEvents.aspx" />
     <Content Include="EventDetails.aspx" />
     <Content Include="Events_Search.aspx" />
     <Content Include="Images\JohnMayer.jpg" />
@@ -219,6 +221,13 @@
       <DependentUpon>panel.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="clerk\EventDetails.aspx.cs">
+      <DependentUpon>EventDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="clerk\EventDetails.aspx.designer.cs">
+      <DependentUpon>EventDetails.aspx</DependentUpon>
+    </Compile>
     <Compile Include="clerk\SearchReservation.aspx.cs">
       <DependentUpon>SearchReservation.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -239,6 +248,13 @@
     </Compile>
     <Compile Include="clerk\Tickets.aspx.designer.cs">
       <DependentUpon>Tickets.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="clerk\ViewEvents.aspx.cs">
+      <DependentUpon>ViewEvents.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="clerk\ViewEvents.aspx.designer.cs">
+      <DependentUpon>ViewEvents.aspx</DependentUpon>
     </Compile>
     <Compile Include="EventDetails.aspx.cs">
       <DependentUpon>EventDetails.aspx</DependentUpon>
